# Dungeon-Crawler

./: .gitignore  CMakeLists.txt  CMakeLists.txt~  FindYamlCpp.cmake  README.md  sudoBoostInstall.sh
HeaderFiles/: Authentication.h  FileIO.h  UniqueID.h  UserLogin.h  UserSignUp.h
ImplementationFiles/: Authentication.cpp  FileIO.cpp
docs/: It2_Requirements.txt  Spell Summary.txt  instruction.txt  midgaard.yml  quickTutNotesNov18.txt  records.txt  records.txt~  requirements.txt  requirementsDoc  smurf.yml  yaml summary.txt
docs/roughNotes/: lab-1-notes.txt  lab-1-summary.txt  lab-3-notes.txt  lab-4-notes.txt  magic-system-notes.txt
docs/textadventureDocumentation/: conf.py  extrahelp.rst  index.rst  make.bat
docs/textadventureDocumentation/_build/doctrees/: environment.pickle  extrahelp.doctree  gameIntroduction.doctree  howtoplay.doctree  index.doctree  setupAndinstallation.doctree
docs/textadventureDocumentation/_build/html/: .buildinfo  extrahelp.html  gameIntroduction.html  genindex.html  howtoplay.html  index.html  objects.inv  search.html  searchindex.js  setupAndinstallation.html
docs/yaml-cpp/include/: main.cpp
docs/yaml-cpp/include/yaml-cpp/: yaml.h
docs/yamltest/: defense_spells_yamlparser.cpp  monsterstest  npc_yamlparser.cpp  objects_yamlparser.cpp  offense_spells_yamlparser.cpp  reset_yamlparser.cpp  rooms_yamlparser.cpp  spells.yaml  test.cpp  test.cpp~  test.yml  yamltest
docs/yamltest/yaml-cpp/: yaml.h~
include/: Authentication.h  Client.h  CommandParser.h  Command_Parser.h  FileIO.h  ItemReset.h  Resets.h  Server.h  Session.h  UniqueID.h  UserInterface.h  UserLogin.h  UserSignUp.h  YamlParser.h  abilityStats.h  admin.h  area.h  creature.h  entity.h  inventory.h  item.h  itemLibrary.h  location.h  monster.h  npc.h  npcLibrary.h  npcs.h  object.h  resetLibrary.h  room.h  roomLibrary.h  spellsLibrary.h  user.h  world.h
include/Formula/: Dice.h  Formula.h  randomHealthFormula.h
include/configuration/: configuration.h
include/magic/: damageSpell.h  healingSpell.h  spell.h
include/reset/: DoorReset.h  ItemReset.h  NPCReset.h  Reset.h
lib/: CMakeLists.txt  CMakeLists.txt~
lib/Formula/: CMakeLists.txt  Dice.cpp  Formula.cpp  randomHealthFormula.cpp
lib/UserInterface/: CMakeLists.txt  UserInterface.cpp
lib/abilityStats/: CMakeLists.txt
lib/authentication/: Authentication.cpp  CMakeLists.txt  FileIO.cpp  UniqueID.cpp  UserLogin.cpp  UserSignUp.cpp  main.cpp
lib/client/: CMakeLists.txt  Client.cpp
lib/cmd_module/: CMakeLists.txt  CommandParser.cpp
lib/configuration/: CMakeLists.txt  Configuration.cpp
lib/creature/: CMakeLists.txt  creature.cpp
lib/inWorld/: CMakeLists.txt  CMakeLists.txt~
lib/inWorld/inventory/: inventory.cpp
lib/inWorld/room/: CMakeLists.txt  room.cpp  room_TestModule.cpp
lib/inWorld/user/: CMakeLists.txt  user.cpp
lib/inWorld/world/: room.h  user.cpp  user.h  world.cpp  world.h  worldTest.cpp
lib/inventory/: CMakeLists.txt  inventory.cpp
lib/item/: CMakeLists.txt  item.cpp
lib/magic/: CMakeLists.txt  Spell.cpp  damageSpell.cpp  healingSpell.cpp
lib/monster/: CMakeLists.txt  monster.cpp
lib/npc/: CMakeLists.txt  npc.cpp  npcs.cpp
lib/object/: CMakeLists.txt  object.cpp
lib/resets/: CMakeLists.txt  DoorReset.cpp  ItemReset.cpp  NPCReset.cpp  Reset.cpp  Resets.cpp
lib/server/: CMakeLists.txt  Server.cpp  Session.cpp
lib/user/: user.cpp
lib/world/: CMakeLists.txt  DoorTest.cpp  abilityStats.cpp  admin.cpp  creature.cpp  door.cpp  entity.cpp  inventory.cpp  item.cpp  itemLibrary.cpp  monster.cpp  npc.cpp  npcLibrary.cpp  resetLibrary.cpp  room.cpp  roomLibrary.cpp  spellsLibrary.cpp  user.cpp  world.cpp  worldTest.cpp
lib/yamlInterface/: CMakeLists.txt  YamlParser.cpp
res/: configuration.txt
scripts/: installBoost.sh
test/: CMakeLists.txt
test/battleTest/: CMakeLists.txt  battleTest.cpp
test/cmd_usr_world/: CMakeLists.txt  cmd_usr_world_Test.cpp
test/command_test/: cmdtest.cpp
test/npcLibTest/: CMakeLists.txt  npcLibTest.cpp
test/resets/: CMakeLists.txt  ResetsTest.cpp
test/testProgram/: main.cpp
test/userTest/: CMakeLists.txt  userTest.cpp
test/worldTest/: CMakeLists.txt  worldTest.cpp
test/yamltest/: CMakeLists.txt  cmd_yaml.cpp  me.yaml  npc_yamlparser.cpp  objects_yamlparser.cpp  reset_yamlparser.cpp  rooms_yamlparser.cpp  spells_yamlparser.cpp
tools/: CMakeLists.txt  CMakeLists.txt~
tools/battleTest/: battleTest.cpp
tools/client/: CMakeLists.txt  ClientMain.cpp
tools/command_test/: CMakeLists.txt  CMakelists.txt  cmdtest.cpp
tools/game/: CMakeLists.txt~
tools/game/classes/: CMakeLists.txt  area.cpp  location.cpp  room.cpp  user.cpp
tools/game/text/: CMakeLists.txt~
tools/server/: CMakeLists.txt  ServerMain.cpp
tools/testProgram/: CMakeLists.txt  main.cpp
tools/worldTest/: CMakeLists.txt  worldTest.cpp
yaml/command/: Commands.yaml  attackNPC.txt  check.txt  look.txt  move.txt  say.txt  take.txt  toss.txt  use.txt
yaml/gameYaml/: midgaard.yaml  spells.yaml
yamlFiles/: CMakeLists.txt
yamlexample/: readyaml_npc.cpp
(+5 files in other folders)
